style.css
body {
    -webkit-font-smoothing: antialiased;
    text-rendering: optimizeLegibility;
    font-family: 'Helvetica Neue', Helvetica, Arial sans-serif;
    letter-spacing: 1px;
}

a {
    text-decoration: none;
    color: inherit;
}

p {
    margin: 5px 0px;
}

.home {
    font-size: 24px;
    line-height: 1.4;
}

.cv {
    font-size: 14px;
    line-height: 2.5;
}

.exhibiton-section {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.exhibition-wrapper {
    padding: 20px 20px;
}

.image-section {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.image-wrapper {
    padding: 20px 20px;
}

.image-wrapper-portrait {
    padding: 20px 20px;
}

.description-wrapper-landscape {
    display: flex;
    justify-content: start;
    flex-direction: column;
    margin: 10px 0px;
}

.image {
    width: 100%;
}

.landscape {
    max-width: 1000px;
}

.portrait {
    max-width: 497px;
}

.sticks {
    max-width: 467px;
}

.log {
    max-width: 525px;
}

.nav-bar {
    display: flex;
    justify-content: space-between;
    max-width: 1000px;
    width: 1000px;
    padding: 10px 0px;
}

.cv-section {
    padding: 10px 0px;
    width: 1000px;
}

.cv-heading {
    padding: 5px 0px;
}

.cv-item {
    letter-spacing: 0px;
    font-size: 12px;
}

/* .nav-item {
    padding: 0px 5px;
} */

/* .exhibiton-title {
    width: 100%;
} */

.title-wrapper {
    display: flex;
    justify-content: start;
    padding-left: 20px;
}

.cv-title-wrapper {
    display: flex;
    justify-content: start;
}

.container {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

@media (max-width: 1000px) {
    header {
        width: 100%;
    }

    .nav-bar {
        display: flex;
        justify-content: space-between;
        width: calc(100% - 40px);
        margin: 0px 20px;
        padding: 10px 0px;
    }

    .image-wrapper-portrait {
        display: flex;
        align-items: center;
        justify-content: center;
        flex-direction: column;
        padding: 20px 20px;
    }

    .portrait {
        max-width: 600px;
    }

    .sticks {
        max-width: 600px;
        padding: 0px 0px 20px 0px;
    }

    .log {
        max-width: 600px;
        padding: 20px 0px 0px 0px;
    }
}

